# aviation-performance-tool

./: .env.example  .git_commit_log.txt  .git_commit_log_2.txt  .git_commit_log_3.txt  .git_commit_log_4.txt  .git_commit_log_5.txt  .git_commit_log_6.txt  .git_commit_log_7.txt  .git_push_log_3.txt  .git_push_log_4.txt  .git_push_log_5.txt  .git_push_log_6.txt  .git_push_log_7.txt  .gitignore  .importlinter  CHANGELOG.md  CONTRIBUTING.md  README.md  TRACEABILITY_ANALYSIS.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
backend/: Dockerfile  README.md  coverage_report.txt  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/data/: da40_ng.json
backend/app/models/: __init__.py  aircraft.py
backend/app/routers/: __init__.py  aircraft.py  calculations.py  health.py  weather.py
backend/app/schemas/: __init__.py  aircraft.py  calculation.py  weather.py
backend/app/services/: __init__.py  cg_validation.py  mass_balance.py  performance.py  units.py  weather.py
backend/app/services/mass_balance/: __init__.py  core.py  logic.py
backend/app/services/performance/: __init__.py  core.py  logic.py
backend/app/utils/: data_loader.py
backend/tests/: conftest.py
backend/tests/integration/: test_aircraft_api.py  test_aircraft_api_full.py  test_api_endpoints.py  test_calculations_api.py
backend/tests/unit/: test_aircraft_models.py  test_cg_validation.py  test_data_profiles.py  test_mass_balance.py  test_performance.py  test_unit_conversion.py  test_units.py  test_weather_service.py
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md
docs/development/: BRANCHING_STRATEGY.md
docs/requirements/: initial_requirements.md  (+1 more)
frontend/: .eslintrc.json  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  stryker.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+37 files in other folders)
